--- a/Ch4/SASS_SampleDoc.html
+++ b/Ch4/SASS_SampleDoc.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <title>SASS Sample Document</title>
-        <link rel="stylesheet" href="mixin_styles.css" type="text/css">
+        <link rel="stylesheet" href="ops_styles.css" type="text/css">
     </head>
 
     <body>
