--- a/Ch5/SASS_SampleDoc.html
+++ b/Ch5/SASS_SampleDoc.html
@@ -2,11 +2,11 @@
 <html lang="en">
     <head>
         <title>SASS Sample Document</title>
-        <link rel="stylesheet" href="" type="text/css">
+        <link rel="stylesheet" href="funcs_styles.css" type="text/css">
     </head>
 
     <body>
-        <div id="pagecontent">
+        <div class="pagecontent">
             <header>
                 <h1>SASS Sample Document</h1>
                 <h2>Heading 2</h2>
@@ -14,11 +14,11 @@
                 <h4>Heading 4</h4>
             </header>
             <div>
-                <p id="mypara">Sample paragraph of text</p>
+                <p class="mypara">Sample paragraph of text</p>
                 <p>Another paragraph of text</p>
             </div>
             <div>
-                <ul id="list1">
+                <ul class="list1">
                 <li>List Item 1</li>
                 <li>List Item 2</li>
                 <li>List Item 3</li>
